--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "clsx": "^2.1.1",
     "expo": "~54.0.29",
     "expo-constants": "~18.0.12",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.10",
+    "expo-location": "~19.0.8",
     "expo-router": "~6.0.19",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
@@ -31,6 +33,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-geocoder-reborn": "^0.9.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
